# deepstream_parallel_inference_app

./: .gitignore
tritonclient/sample/apps/deepstream-parallel-infer/: deepstream_parallel_infer.h
tritonclient/sample/apps/deepstream-parallel-infer-python/: deepstream_paraller_infer.py
tritonclient/sample/apps/deepstream-parallel-infer-python/bindings/: CMakeLists.txt
tritonclient/sample/apps/deepstream-parallel-infer-python/bindings/src/: bindings.cpp
